force-app/main/default/objects/Account/fields/Annual_Quantity_Handled__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quantity_Handled__c</fullName>
    <label>Annual Quantity Handled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>