force-app/main/default/objects/Account/fields/Business_domain__c.field-meta.xml
<CustomField>
    <fullName>Business_domain__c</fullName>
    <label>Business domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>