force-app/main/default/objects/Account/fields/Country_Key__c.field-meta.xml
<CustomField>
    <fullName>Country_Key__c</fullName>
    <label>Country Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>