force-app/main/default/objects/Account/fields/Div__c.field-meta.xml
<CustomField>
    <fullName>Div__c</fullName>
    <label>Div</label>
    <length>2</length>
    <type>Text</type>
</CustomField>