force-app/main/default/objects/Account/fields/Domestic_Channel__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Channel__c</fullName>
    <label>Domestic Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>