force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>HYPERLINK(&quot;http://www.google.com/maps/search/?api=1&amp;query=&quot; + IF( Start_Location__Latitude__s &lt; 1,&quot;0&quot; + TEXT ( Start_Location__Latitude__s ), TEXT( Start_Location__Latitude__s ))+ &quot;,&quot; + IF(Start_Location__Latitude__s &lt; 1, &quot;0&quot; + TEXT(Start_Location__Longitude__s), TEXT (Start_Location__Longitude__s)),&quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Location Link</label>
    <type>Text</type>
</CustomField>