force-app/main/default/objects/Account/fields/Other_Brands__c.field-meta.xml
<CustomField>
    <fullName>Other_Brands__c</fullName>
    <label>Other Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>