force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>Z000</fullName>
            </value>
            <value>
                <fullName>Z001</fullName>
            </value>
            <value>
                <fullName>Z002</fullName>
            </value>
            <value>
                <fullName>Z003</fullName>
            </value>
            <value>
                <fullName>Z004</fullName>
            </value>
            <value>
                <fullName>Z005</fullName>
            </value>
            <value>
                <fullName>Z006</fullName>
            </value>
            <value>
                <fullName>Z007</fullName>
            </value>
            <value>
                <fullName>Z008</fullName>
            </value>
            <value>
                <fullName>Z009</fullName>
            </value>
            <value>
                <fullName>Z010</fullName>
            </value>
            <value>
                <fullName>Z011</fullName>
            </value>
            <value>
                <fullName>Z012</fullName>
            </value>
            <value>
                <fullName>Z013</fullName>
            </value>
            <value>
                <fullName>Z014</fullName>
            </value>
            <value>
                <fullName>Z015</fullName>
            </value>
            <value>
                <fullName>Z016</fullName>
            </value>
            <value>
                <fullName>Z017</fullName>
            </value>
            <value>
                <fullName>Z018</fullName>
            </value>
            <value>
                <fullName>Z019</fullName>
            </value>
            <value>
                <fullName>Z020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>