force-app/main/default/objects/Account/fields/Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>Product_Interested__c</fullName>
    <label>Product Interested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fibre</fullName>
            </value>
            <value>
                <fullName>Yarn</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>