force-app/main/default/objects/Account/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <label>Search Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>