force-app/main/default/objects/Account/fields/Street3__c.field-meta.xml
<CustomField>
    <fullName>Street3__c</fullName>
    <label>Street3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>