force-app/main/default/objects/Account/fields/Street_House__c.field-meta.xml
<CustomField>
    <fullName>Street_House__c</fullName>
    <label>Street/House</label>
    <length>60</length>
    <type>Text</type>
</CustomField>