force-app/main/default/objects/Account/validationRules/billingAddress_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>billingAddress_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
ISBLANK( BillingStreet ), 
ISBLANK( BillingPostalCode ), 
ISBLANK( BillingCity ), 
ISBLANK( BillingCountry ) 
)</errorConditionFormula>
    <errorMessage>Billing Address is mandatory.</errorMessage>
</ValidationRule>